--- a/json2.html
+++ b/json2.html
@@ -8,5 +8,21 @@
 
 	<h1>Json Ejercicios</h1>
 
+	<script type="text/javascript">
+		
+		var productos = 
+{
+"codigo": "001",
+"nombre": "camisa"
+}, {
+"nit": "002",
+"nombre": "pantalon"
+};
+
+
+console.log(productos);
+
+	</script>
+
 </body>
 </html>
